--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -18,6 +18,8 @@ keycloak_mosip_clients:
   - {realm_id: 'mosip', client_id: 'mosip-partnermanager-client', secret: 'abc123'} 
   - {realm_id: 'mosip', client_id: 'mosip-resident-client', secret: 'abc123'} 
   - {realm_id: 'mosip', client_id: 'mosip-admin-services-client', secret: 'abc123'} 
+  - {realm_id: 'mosip', client_id: 'mosip-crereq-client', secret: 'abc123'}
+  - {realm_id: 'mosip', client_id: 'mosip-creser-client', secret: 'abc123'}
 
 keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any client)
   - {realm_id: 'mosip', client_id: '', role_name: 'REGISTRATION_OFFICER'}
@@ -49,6 +51,9 @@ keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any cli
   - {realm_id: 'preregistration', client_id: '', role_name: 'PRE_REGISTRATION_ADMIN'}
   - {realm_id: 'preregistration', client_id: '', role_name: 'PREREG'}
   - {realm_id: 'preregistration', client_id: '', role_name: 'REGISTRATION_PROCESSOR'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'CREDENTIAL_ISSUANCE'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'CREDENTIAL_REQUEST'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'CREATE_SHARE'}
 
 keycloak_mosip_users: # Assumption "username.json" exists with same username inside 
   - {realm_id: 'mosip', user_file: 'users/testuser.json'}
@@ -127,7 +132,10 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: '110119', role_name: 'REGISTRATION_ADMIN'}
   - {realm_id: 'mosip', username: '110119', role_name: 'REGISTRATION_SUPERVISOR'}
   - {realm_id: 'mosip', username: '110119', role_name: 'RESIDENT'}
-  
+  - {realm_id: 'mosip', username: '110119', role_name: 'CREDENTIAL_ISSUANCE'}  
+  - {realm_id: 'mosip', username: '110119', role_name: 'CREDENTIAL_REQUEST'}
+  - {realm_id: 'mosip', username: '110119', role_name: 'CREATE_SHARE'}
+
   - {realm_id: 'mosip', username: '110127', role_name: 'REGISTRATION_OFFICER'}
   - {realm_id: 'mosip', username: '110127', role_name: 'ID_AUTHENTICATION'}
   - {realm_id: 'mosip', username: '110127', role_name: 'DEVICE_PROVIDER'}
@@ -147,6 +155,10 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: '110127', role_name: 'REGISTRATION_ADMIN'}
   - {realm_id: 'mosip', username: '110127', role_name: 'REGISTRATION_SUPERVISOR'}
   - {realm_id: 'mosip', username: '110127', role_name: 'RESIDENT'}
+  - {realm_id: 'mosip', username: '110119', role_name: 'RESIDENT'}
+  - {realm_id: 'mosip', username: '110119', role_name: 'CREDENTIAL_ISSUANCE'}
+  - {realm_id: 'mosip', username: '110119', role_name: 'CREDENTIAL_REQUEST'}
+  - {realm_id: 'mosip', username: '110119', role_name: 'CREATE_SHARE'}
   
   - {realm_id: 'mosip', username: '110068', role_name: 'REGISTRATION_OFFICER'}
   - {realm_id: 'mosip', username: '110068', role_name: 'ID_AUTHENTICATION'}
@@ -314,4 +326,9 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: 'service-account-mosip-reg-client', role_name: 'REGISTRATION_OPERATOR'}
   - {realm_id: 'mosip', username: 'service-account-mosip-reg-client', role_name: 'REGISTRATION_SUPERVISOR'}
   - {realm_id: 'mosip', username: 'service-account-mosip-resident-client', role_name: 'RESIDENT'}
-
+  - {realm_id: 'mosip', username: 'service-account-mosip-creser-client', role_name: 'CREDENTIAL_ISSUANCE'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-creser-client', role_name: 'REGISTRATION_PROCESSOR'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-creser-client', role_name: 'POLICYMANAGER'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-creser-client', role_name: 'CREATE_SHARE'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-crereq-client', role_name: 'CREDENTIAL_ISSUANCE'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-crereq-client', role_name: 'CREDENTIAL_REQUEST'}
