--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -332,3 +332,5 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: 'service-account-mosip-creser-client', role_name: 'CREATE_SHARE'}
   - {realm_id: 'mosip', username: 'service-account-mosip-crereq-client', role_name: 'CREDENTIAL_ISSUANCE'}
   - {realm_id: 'mosip', username: 'service-account-mosip-crereq-client', role_name: 'CREDENTIAL_REQUEST'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-resident-client', role_name: 'CREDENTIAL_REQUEST'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-regproc-client', role_name: 'CREDENTIAL_REQUEST'}
