--- a/deployment/sandbox-v2/playbooks/console.yml
+++ b/deployment/sandbox-v2/playbooks/console.yml
@@ -14,6 +14,7 @@
   roles:
      - {role: packages/epel, tags: [epel]}
      - {role: packages/vim, tags: [vim]}
+     - {role: packages/docker, tags: [docker]}
      - {role: packages/pip, tags: [pip]}
      - {role: packages/python3, tags: [python3]} # Needed for letsencrypt and test scripts
      - {role: packages/kubectl, tags: [kubectl]}
