--- a/deployment/sandbox-v2/playbooks/coredns.yml
+++ b/deployment/sandbox-v2/playbooks/coredns.yml
@@ -1,10 +1,10 @@
 # Playbook to run CoreDNS server on console and configure /etc/resolv.conf
 # on all machines to point to this DNS.
-#
+# Run these only if coredns is enabled.
 - hosts: dnsserver
   gather_facts: true
   roles: 
-      - {role: coredns} 
+      - {role: coredns, when: coredns.enabled == true} 
 
 # Update resolv.conf file on all machines
 - hosts: all
@@ -14,4 +14,5 @@
      template:
        src: '{{install_root}}/roles/coredns/templates/resolv.conf.j2'
        dest: /etc/resolv.conf
+     when: coredns.enabled == true
      become: yes
