[MOSIP-9183] docker-py installed.

--- a/deployment/sandbox-v2/roles/packages/docker/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/packages/docker/tasks/main.yml
@@ -7,3 +7,9 @@
 - name: Run docker
   shell: 'systemctl start docker'
   become: yes
+
+- name: Install docker py
+  pip:
+    name: docker-py
+    state: present
+  become: yes
