--- a/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/defaults/main.yml
@@ -55,6 +55,7 @@ keycloak_mosip_roles:  # Currently, all rolese belong to a realm (not to any cli
   - {realm_id: 'mosip', client_id: '', role_name: 'CREDENTIAL_ISSUANCE'}
   - {realm_id: 'mosip', client_id: '', role_name: 'CREDENTIAL_REQUEST'}
   - {realm_id: 'mosip', client_id: '', role_name: 'CREATE_SHARE'}
+  - {realm_id: 'mosip', client_id: '', role_name: 'MASTERDATA_ADMIN'}
 
 keycloak_mosip_users: # Assumption "username.json" exists with same username inside 
   - {realm_id: 'mosip', user_file: 'users/testuser.json'}
@@ -338,3 +339,4 @@ keycloak_mosip_user_role_map:
   - {realm_id: 'mosip', username: 'service-account-mosip-datsha-client', role_name: 'CREATE_SHARE'}
   - {realm_id: 'mosip', username: 'service-account-mosip-datsha-client', role_name: 'REGISTRATION_PROCESSOR'}
   - {realm_id: 'mosip', username: 'service-account-mosip-datsha-client', role_name: 'POLICYMANAGER'}
+  - {realm_id: 'mosip', username: 'service-account-mosip-admin-client', role_name: 'MASTERDATA_ADMIN'}
