--- a/deployment/sandbox-v2/playbooks/hdfs.yml
+++ b/deployment/sandbox-v2/playbooks/hdfs.yml
@@ -1,7 +1,7 @@
 # Installs HDFS.
 
 # Create folders for persistence on NFS
-- hosts: nfsserver
+- hosts: console
   tasks:
     - {name: 'Create folder', file: {name: '{{hdfs.nfs.nn.path}}', state: directory}, become: yes}
     - {name: 'Create folder', file: {name: '{{hdfs.nfs.dn.path}}', state: directory}, become: yes}
