--- a/deployment/sandbox-v2/playbooks/nginx.yml
+++ b/deployment/sandbox-v2/playbooks/nginx.yml
@@ -1,6 +1,6 @@
 # Install nginx and letsencrypt
 # site.ssl.get_certificate defined in group_vars/all.yml
-- hosts: nginxserver
+- hosts: console
   gather_facts: true
   roles:
     - {role: packages/epel, tags: [epel]}
