[MOSIP-9183] Bug fix in coredns config creation.

--- a/deployment/sandbox-v2/roles/coredns/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/coredns/tasks/main.yml
@@ -21,7 +21,7 @@
 - name: Populate dns db file
   lineinfile:
     path: '{{coredns.db}}'
-    line:  '{{item}}    IN    A    {{hostvars[item]["ansible_host"]}}'
+    line:  '{{item}}.    IN    A    {{hostvars[item]["ansible_host"]}}'
   with_inventory_hostnames:
     - all
 
