--- a/deployment/sandbox-v2/playbooks/console.yml
+++ b/deployment/sandbox-v2/playbooks/console.yml
@@ -25,6 +25,7 @@
      - {role: packages/requests3}
      - {role: packages/psycopg2}
      - {role: packages/tmux, tags: [tmux]}
+     - {role: packages/bind-utils, tags: [bind-utils]}
 
   tasks: 
     - name: Set read permission to home directory needed for nginx 
