--- a/deployment/sandbox-v2/playbooks/dmzcluster.yml
+++ b/deployment/sandbox-v2/playbooks/dmzcluster.yml
@@ -1,9 +1,12 @@
 # DMZ cluster
 - import_playbook: cluster.yml
   vars:
-    cluster: dmzcluster
+    cluster: dmzmaster dmzworkers
     master: dmzmaster.sb
     workers: dmzworkers
+    cluster_name: dmzcluster  # Any string
+    cluster_master: dmzmaster.sb  # Host name of master machine. e.g: mzmaster.sb
+    console_kubeadmin_config_path: '{{clusters.dmz.kube_config}}'
 
 # Ingress nginx controller
 - import_playbook: ingress-nginx.yml
