--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -215,7 +215,7 @@ databases:
   mosip_ida:
     user: idauser
     sql_path: '{{repos.ida.dest}}/db_scripts'
-  mosip_pmp:
+  mosip_pms:
     user: pmpuser
     sql_path: '{{repos.pms.dest}}/db_scripts'
 
