[MOSIP-9183] Reset scripts updated.

--- a/deployment/sandbox-v2/playbooks/reset/reset-cluster.yml
+++ b/deployment/sandbox-v2/playbooks/reset/reset-cluster.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: '{{cluster}}'
   gather_facts: no
+    vars_files: '{{install_root}}/group_vars/k8s.yml'
   become: yes
   vars_prompt:
     - name: sure 
