Sandbox domain name passed via environmet variables.

--- a/deployment/sandbox-v2/helm/charts/admin/templates/ui-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/admin/templates/ui-dep.yaml
@@ -25,6 +25,9 @@ spec:
       - name: {{.Values.services.ui.serviceName}}
         image: {{ .Values.services.ui.dockerImage  }}
         imagePullPolicy: {{ .Values.imagePullPolicy }} 
+        env:
+        - name: mosipbox_public_url
+          value: {{ .Values.domainName }}
         ports:
         - containerPort: {{ .Values.services.ui.containerPort }} 
         readinessProbe:
