Admin installation updated with sandbox url.

--- a/deployment/sandbox-v2/helm/charts/admin/templates/ui-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/admin/templates/ui-dep.yaml
@@ -27,7 +27,7 @@ spec:
         imagePullPolicy: {{ .Values.imagePullPolicy }} 
         env:
         - name: mosipbox_public_url
-          value: {{ .Values.domainName }}
+          value: {{ .Values.sitePublicUrl }}
         ports:
         - containerPort: {{ .Values.services.ui.containerPort }} 
         readinessProbe:
