--- a/deployment/sandbox-v2/helm/charts/admin/templates/admin-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/admin/templates/admin-dep.yaml
@@ -41,7 +41,7 @@ spec:
         - name: is_glowroot_env
           value: {{ .Values.isGlowroot }}
         - name: mosipbox_public_url
-          value: {{ .Values.domainName }}
+          value: {{ .Values.sitePublicUrl }}
         ports:
         - containerPort: {{ .Values.services.admin.containerPort }}
         readinessProbe:
