added key generator for ida

--- a/deployment/sandbox-v2/helm/charts/ida/templates/keys-job.yaml
+++ b/deployment/sandbox-v2/helm/charts/ida/templates/keys-job.yaml
@@ -1,10 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ .Values.generators.key.name }} 
+  name: {{ .Values.generators.keygen.name }} 
   namespace: {{ .Release.Namespace }} 
   labels:
-    app: {{ .Values.generators.key.name }}
+    app: {{ .Values.generators.keygen.name }}
     component: {{ .Values.component }} 
   annotations:
     "helm.sh/hook": pre-install
@@ -14,13 +14,13 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ .Values.generators.key.name }} 
+        app: {{ .Values.generators.keygen.name }} 
         component: {{ .Values.component }} 
     spec:
       restartPolicy: Never  # This is one time job
       containers:
-      - name: {{ .Values.generators.key.name }} 
-        image: {{ .Values.generators.key.dockerImage }}
+      - name: {{ .Values.generators.keygen.name }} 
+        image: {{ .Values.generators.keygen.dockerImage }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         env:
         - name: active_profile_env
@@ -29,9 +29,11 @@ spec:
           value: {{ .Values.springConfigLabel }} 
         - name: spring_config_url_env
           value: {{ .Values.configServerUrl }} 
+        - name: spring_config_name_env
+          value: id-authentication
         - name: artifactory_url_env
           value: {{ .Values.artifactoryUrl }} 
         - name: is_glowroot_env
           value: absent
         - name: PKCS11_PROXY_SOCKET
-          value: {{ .Values.generators.key.hsmUrl }} 
+          value: {{ .Values.generators.keygen.hsmUrl }} 
