--- a/deployment/sandbox-v2/playbooks/nginx.yml
+++ b/deployment/sandbox-v2/playbooks/nginx.yml
@@ -7,8 +7,8 @@
     ssl_certificate_key: '{{ssl.ca[site.ssl.ca].certificate_key}}'
     ssl_prop: '{{ssl.ca[site.ssl.ca]}}'
   roles:
-#    - {role: packages/epel, tags: [epel]}
-#    - {role: ssl/self-signed}  
+    - {role: packages/epel, tags: [epel]}
+    - {role: ssl/self-signed}  
     - {role: nginx, when: ssl_prop.get_certificate == true and site.ssl.ca == 'letsencrypt' }
     - {role: ssl/letsencrypt, when: ssl_prop.get_certificate == true and site.ssl.ca == 'letsencrypt' }
     - {role: nginx, nginx_conf_template: nginx_https_conf.yml.j2}  # Conf file with ssl
