--- a/deployment/sandbox-v2/playbooks/console.yml
+++ b/deployment/sandbox-v2/playbooks/console.yml
@@ -16,6 +16,7 @@
      - {role: packages/vim, tags: [vim]}
      - {role: packages/pip, tags: [pip]}
      - {role: packages/python3, tags: [python3]} # Needed for letsencrypt and test scripts
+     - {role: packages/jinja2, tags: [jinja2]} # Needed for letsencrypt and test scripts
      - {role: packages/docker, tags: [docker]}
      - {role: packages/kubectl, tags: [kubectl]}
      - {role: packages/psql, tags: [psql]}
