--- a/deployment/sandbox-v2/helm/charts/packetmanager/templates/packetmanager-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/packetmanager/templates/packetmanager-dep.yaml
@@ -42,6 +42,9 @@ spec:
           value: {{ .Values.isGlowroot }} 
         ports:
         - containerPort: {{ .Values.services.packet.containerPort }}
+
+        {{- include "logger.mount" .  | indent 8}}
+
         readinessProbe:
           httpGet:
             path: {{ .Values.services.packet.healthUrl }} 
@@ -54,3 +57,7 @@ spec:
   #          port: {{ .Values.services.packet.containerPort }} 
   #        initialDelaySeconds: {{ .Values.probe.initialDelay }} 
   #        periodSeconds: {{ .Values.probe.period }}
+  #
+      {{- include "logger.sidecar" .  | indent 6}}
+
+      {{- include "logger.volume" .  | indent 6}}
